--- a/client/ext/language/settings.xml
+++ b/client/ext/language/settings.xml
@@ -1,5 +1,5 @@
 <a:application xmlns:a="http://ajax.org/2005/aml">
-    <a:checkbox class="underlined" label="Enable JSHint Rules"
+    <a:checkbox class="underlined" label="Enable Hints and Warnings"
         value="[language/@jshint]" onclick="require('ext/language/language').setJSHint()" skin="checkbox_grey" position="1000"/>
     <a:checkbox class="underlined" label="Highlight Variable Instances"
         value="[language/@instanceHighlight]" onclick="require('ext/language/language').setInstanceHighlight()" skin="checkbox_grey" position="2000"/>
